// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select snapshots should render Select 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp Select"
    data-test-select=""
  >
    <div
      class="css-1jnxvbp TextField"
      data-test-text-field=""
      data-test-tooltip=""
    >
      <div
        class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--outlined"
        data-test-text-field-wrapper=""
      >
        <input
          class="TextFieldWrapper__input"
          data-test-text-field-input=""
          maxlength="6"
          readonly=""
          value="0"
        />
        <div
          class="css-1jnxvbp Icon Icon--neutral-1"
          data-test-icon="chevron-down"
          height="5"
          name="ChevronDown"
          style="margin-right: 5px;"
          width="8"
        />
      </div>
    </div>
    <ul
      class="css-1jnxvbp SelectOptions"
      data-test-box=""
      data-test-select-options=""
      style="left: 0px; top: 24px; width: 0px;"
    >
      <li
        class="css-1jnxvbp SelectItem SelectItem--selected"
        data-test-select-item="0"
        data-value="0"
        role="option"
        tabindex="0"
      >
        <div
          class="css-1jnxvbp SelectItem__check-icon SelectItem__check-icon--selected Icon Icon--neutral-1"
          data-test-icon="check"
          height="12"
          name="Check"
          width="12"
        />
        0
      </li>
      <div
        class="css-144d4hh"
        data-test-box=""
      />
      <li
        class="css-1jnxvbp SelectItem"
        data-test-select-item="1"
        data-value="1"
        role="option"
        tabindex="0"
      >
        <div
          class="css-1jnxvbp SelectItem__check-icon Icon Icon--neutral-1"
          data-test-icon="check"
          height="12"
          name="Check"
          width="12"
        />
        1
      </li>
      <div
        class="css-144d4hh"
        data-test-box=""
      />
      <li
        class="css-1jnxvbp SelectItem"
        data-test-select-item="2"
        data-value="2"
        role="option"
        tabindex="0"
      >
        <div
          class="css-1jnxvbp SelectItem__check-icon Icon Icon--neutral-1"
          data-test-icon="check"
          height="12"
          name="Check"
          width="12"
        />
        2
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Select snapshots should render when mixed 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp Select"
    data-test-select=""
  >
    <div
      class="css-1jnxvbp TextField"
      data-test-text-field=""
      data-test-tooltip=""
    >
      <div
        class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--outlined"
        data-test-text-field-wrapper=""
      >
        <input
          class="TextFieldWrapper__input"
          data-test-text-field-input=""
          maxlength="6"
          readonly=""
          value="Mixed"
        />
        <div
          class="css-1jnxvbp Icon Icon--neutral-1"
          data-test-icon="chevron-down"
          height="5"
          name="ChevronDown"
          style="margin-right: 5px;"
          width="8"
        />
      </div>
    </div>
    <ul
      class="css-1jnxvbp SelectOptions"
      data-test-box=""
      data-test-select-options=""
      style="left: 0px; top: 24px; width: 0px;"
    >
      <li
        class="css-1jnxvbp SelectItem"
        data-test-select-item="0"
        data-value="0"
        role="option"
        tabindex="0"
      >
        <div
          class="css-1jnxvbp SelectItem__check-icon Icon Icon--neutral-1"
          data-test-icon="check"
          height="12"
          name="Check"
          width="12"
        />
        0
      </li>
      <div
        class="css-144d4hh"
        data-test-box=""
      />
      <li
        class="css-1jnxvbp SelectItem"
        data-test-select-item="1"
        data-value="1"
        role="option"
        tabindex="0"
      >
        <div
          class="css-1jnxvbp SelectItem__check-icon Icon Icon--neutral-1"
          data-test-icon="check"
          height="12"
          name="Check"
          width="12"
        />
        1
      </li>
      <div
        class="css-144d4hh"
        data-test-box=""
      />
      <li
        class="css-1jnxvbp SelectItem"
        data-test-select-item="2"
        data-value="2"
        role="option"
        tabindex="0"
      >
        <div
          class="css-1jnxvbp SelectItem__check-icon Icon Icon--neutral-1"
          data-test-icon="check"
          height="12"
          name="Check"
          width="12"
        />
        2
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Select snapshots should render with no options 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp Select"
    data-test-select=""
  >
    <div
      class="css-1jnxvbp TextField"
      data-test-text-field=""
      data-test-tooltip=""
    >
      <div
        class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--outlined"
        data-test-text-field-wrapper=""
      >
        <input
          class="TextFieldWrapper__input"
          data-test-text-field-input=""
          maxlength="6"
          readonly=""
          value="0"
        />
        <div
          class="css-1jnxvbp Icon Icon--neutral-1"
          data-test-icon="chevron-down"
          height="5"
          name="ChevronDown"
          style="margin-right: 5px;"
          width="8"
        />
      </div>
    </div>
    <ul
      class="css-1jnxvbp SelectOptions"
      data-test-box=""
      data-test-select-options=""
      style="left: 0px; top: 24px; width: 0px;"
    >
      <li
        class="css-1jnxvbp SelectItem SelectItem--disabled"
        data-test-select-item=""
        data-value=""
        role="option"
        tabindex="0"
      >
        <div
          class="css-1jnxvbp SelectItem__check-icon Icon Icon--neutral-1"
          data-test-icon="check"
          height="12"
          name="Check"
          width="12"
        />
        No options
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`Select snapshots should render with one option 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp Select"
    data-test-select=""
  >
    <div
      class="css-1jnxvbp TextField"
      data-test-text-field=""
      data-test-tooltip=""
    >
      <div
        class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--outlined"
        data-test-text-field-wrapper=""
      >
        <input
          class="TextFieldWrapper__input"
          data-test-text-field-input=""
          maxlength="6"
          readonly=""
          value="0"
        />
        <div
          class="css-1jnxvbp Icon Icon--neutral-1"
          data-test-icon="chevron-down"
          height="5"
          name="ChevronDown"
          style="margin-right: 5px;"
          width="8"
        />
      </div>
    </div>
    <ul
      class="css-1jnxvbp SelectOptions"
      data-test-box=""
      data-test-select-options=""
      style="left: 0px; top: 24px; width: 0px;"
    >
      <li
        class="css-1jnxvbp SelectItem SelectItem--selected"
        data-test-select-item="0"
        data-value="0"
        role="option"
        tabindex="0"
      >
        <div
          class="css-1jnxvbp SelectItem__check-icon SelectItem__check-icon--selected Icon Icon--neutral-1"
          data-test-icon="check"
          height="12"
          name="Check"
          width="12"
        />
        0
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
